- s/^Terminal=0/Terminal=false/ s/^Terminal=1/Terminal=true/ to conform   freedesktop.org desktop-entry specification
Changed files:
    xdrawchem.desktop -> 1.4

--- a/xdrawchem.desktop
+++ b/xdrawchem.desktop
@@ -5,7 +5,7 @@ Comment=Two-dimensional molecule drawing program
 Comment[pl]=Program do rysowania dwuwymiarowych cząsteczek
 Icon=xdrawchem.png
 Exec=xdrawchem
-Terminal=0
+Terminal=false
 Type=Application
 Encoding=UTF-8
 # vi: encoding=utf-8
