--- a/xdrawchem.desktop
+++ b/xdrawchem.desktop
@@ -8,5 +8,5 @@ Exec=xdrawchem
 Terminal=false
 Type=Application
 Encoding=UTF-8
-Categories=Science;Chemistry;
+Categories=Education;Science;Chemistry;
 # vi: encoding=utf-8
