- massive change ( validate errors warrings from desktop-file-validate)   - sed -i 's,Encoding=UTF-8,,g' *.desktop   - sed -i "s,.png,,1" `grep -l 'Icon=[^/].*\.png' *.desktop`   - sed -i "s,MimeType=.*,\0;,g" `grep "MimeType.*semicolon" validate |awk '{print $1}' |tr ":" " "`   - sed -i 's,MapNotify=.*,,g' *.desktop   - sed -i '/^$/d' *.desktop - not all error/warrings validated
Changed files:
    xdrawchem.desktop -> 1.7

--- a/xdrawchem.desktop
+++ b/xdrawchem.desktop
@@ -3,10 +3,9 @@ Name=Xdrawchem
 Name[pl]=Xdrawchem
 Comment=Two-dimensional molecule drawing program
 Comment[pl]=Program do rysowania dwuwymiarowych cząsteczek
-Icon=xdrawchem.png
+Icon=xdrawchem
 Exec=xdrawchem
 Terminal=false
 Type=Application
-Encoding=UTF-8
 Categories=Education;Science;Chemistry;
 # vi: encoding=utf-8
